# variant_sudoku

./: Cargo.toml
.github/workflows/: rust.yml
games/: 4x4_standard.yaml  6x6_standard.yaml  easy_killer.yaml  easy_standard.yaml  hard_standard.yaml  medium_killer.yaml  medium_standard.yaml  trivial_standard.yaml  unsolveable_standard.yaml  unsolveable_variants.yaml
src/: board.rs  errors.rs  gui_bin.rs  lib.rs  main.rs  terminal_bin.rs
src/board/: constraints.rs  digit.rs  parser.rs  parsing.rs  solution.rs  solver.rs  sudoku.rs
src/board/constraints/: base.rs  domino.rs  killer.rs  standard.rs
src/board/parser/: yaml.rs
src/board/solver/: brute_force.rs  easy.rs  house.rs  naked_single.rs
tests/: lib.rs
variant_sudoku/: Cargo.toml
variant_sudoku/games/: hard_standard.yaml  hidden_subset_standard.yaml  locked_candidate_standard.yaml
variant_sudoku/src/: board.rs  errors.rs  lib.rs
variant_sudoku/src/board/: constructor.rs  digit.rs  solver.rs  sudoku.rs
variant_sudoku/src/board/constraints/: standard.rs
variant_sudoku/src/board/constructor/: builder.rs  parser.rs
variant_sudoku/src/board/constructor/parser/: killer.rs  yaml.rs
variant_sudoku/src/board/solver/: house.rs
vsudoku-bins/: Cargo.toml
vsudoku-bins/src/: gui_bin.rs  terminal_bin.rs
