[package]
name = "vsudoku-bins"
version = "0.1.0"
edition = "2021"
default-run = "variant_sudoku_terminal"

[[bin]]
name = "variant_sudoku_terminal"
path = "src/terminal_bin.rs"

[[bin]]
name = "variant_sudoku_gui"
path = "src/gui_bin.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
eframe = "0.31.1"
egui = "0.31.1"
env_logger = "0.11.8"
grid = "0.18.0"
itertools = "0.14.0"
log = "0.4.27"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
variant_sudoku = { path = "../variant_sudoku" }